src/rules/isort/snapshots/ruff__isort__tests__straight_required_import_docstring.py.snap
---
source: src/isort/mod.rs
expression: diagnostics
---
- kind:
    MissingRequiredImport: import os
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 0
  fix:
    content: "\nimport os"
    location:
      row: 1
      column: 19
    end_location:
      row: 1
      column: 19
  parent: ~

