src/rules/isort/snapshots/ruff__isort__tests__trailing_suffix.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 9
  fix: ~
  parent: ~
- kind:
    UnsortedImports: ~
  location:
    row: 5
    column: 4
  end_location:
    row: 6
    column: 13
  fix: ~
  parent: ~

